--- a/src/main/webapp/resources/scripts/tsconfig.json
+++ b/src/main/webapp/resources/scripts/tsconfig.json
@@ -8,8 +8,7 @@
   },
   "files": [
     "script.ts",
-    "functions.ts",
-    "variables.ts"
+    "clock.ts"
   ],
   "include": [
     "../../.eslintrc.js"
